--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "*",
+    "@react-navigation/bottom-tabs": "*",
+    "@react-navigation/native": "*",
     "expo": "*",
+    "expo-constants": "*",
     "react": "*",
-    "react-native": "*"
+    "react-dom": "19.1.0",
+    "react-native": "*",
+    "react-native-gesture-handler": "*",
+    "react-native-maps": "*",
+    "react-native-reanimated": "*",
+    "react-native-safe-area-context": "*",
+    "react-native-screens": "*",
+    "react-native-web": "^0.21.0",
+    "zustand": "^4.4.0"
   }
 }
