feat: Add Google Trends data fetching and analysis
- Implemented Google Trends data fetching in the frontend with `fetchGoogleTrends` function.
- Created backend service for fetching and analyzing Google Trends data, including trend lifecycle analysis.
- Developed hybrid news fetching mechanism combining NewsData.io API and Google News scraper.
- Added Docker configuration for server setup.
- Introduced new data structures for trend visualization and polygon generation.
- Implemented error handling and logging for API requests.
- Added test script for validating NewsData API integration and fallback mechanisms.
- Updated TypeScript configuration and package dependencies.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,10 +4,10 @@ WORKDIR /app
 
 COPY package.json package-lock.json* ./
 
-RUN npm ci && npx expo install
+RUN npm install --legacy-peer-deps
 
 COPY . .
 
 EXPOSE 8081
 
-CMD ["npm", "start", "--", "--tunnel"]
+CMD ["npx", "expo", "start", "--web"]
