--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,20 +10,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "*",
-    "@react-navigation/bottom-tabs": "*",
-    "@react-navigation/native": "*",
-    "expo": "*",
-    "expo-constants": "*",
-    "react": "*",
-    "react-dom": "19.1.0",
-    "react-native": "*",
-    "react-native-gesture-handler": "*",
-    "react-native-maps": "*",
-    "react-native-reanimated": "*",
-    "react-native-safe-area-context": "*",
-    "react-native-screens": "*",
-    "react-native-web": "^0.21.0",
-    "zustand": "^4.4.0"
+    "@expo/metro-runtime": "~3.2.0",
+    "expo": "^51.0.0",
+    "react": "18.2.0",
+    "react-native": "0.74.0",
+    "react-dom": "18.2.0",
+    "react-native-web": "~0.19.0"
+  },
+  "devDependencies": {
+    "@types/react": "~18.2.0",
+    "typescript": "~5.3.0"
   }
 }
