--- a/server/package.json
+++ b/server/package.json
@@ -9,14 +9,22 @@
     "dev": "node --loader ts-node/esm src/index.ts"
   },
   "dependencies": {
+    "@mardillu/us-cities-utils": "^1.2.7",
+    "axios": "^1.6.0",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "google-news-scraper": "^2.7.0",
+    "google-trends-api": "^4.9.2",
+    "node-fetch": "^3.3.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.35",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
+    "@types/node-fetch": "^2.6.13",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
