feat: Implement article text extraction service using node-readability
- Added extractArticleText function to extract main article text from a given URL.
- Created package.json for article-text-extractor service.

feat: Add DataForSEO client and router for SERP data fetching

- Implemented fetchDataForSeoSERP function to retrieve organic search results.
- Created dataForSeoRouter to handle API requests for DataForSEO SERP data.

feat: Introduce DataForSEO Trends client and router

- Added fetchDataForSeoTrends function to fetch Google Trends data.
- Implemented dataForSeoTrendsRouter for handling trends data requests.

feat: Create Puppeteer-based Google Trends fetching service

- Developed fetchTrendsWithPuppeteer function to scrape trends data from Google Trends.

feat: Implement Jaccard similarity filter for article filtering

- Added filterArticlesBySimilarity function to filter articles based on title overlap.

feat: Create media bias lookup service from CSV data

- Implemented MediaBiasLookup class to read and cache media bias ratings from a CSV file.

feat: Develop state trend polygons service and router

- Added loadUsStatesGeoJson function to load state GeoJSON data.
- Implemented getStateTrendPolygons function to fetch and annotate state trends data.

feat: Create router for Puppeteer-based trends fetching

- Added trendsPuppeteerRouter to handle API requests for trends data using Puppeteer.

feat: Utility function to write JSON with timestamped filenames

- Implemented writeJsonWithTimestamp function to save JSON data with a timestamp.

chore: Add TypeScript definitions for node-readability module

- Created node-readability.d.ts to provide TypeScript support for the node-readability library.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,23 +6,24 @@ services:
       context: ./server
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "3001:3001"
     environment:
-      - NODE_ENV=development
-      - PORT=3000
+      - PORT=3001
       - NEWSDATA_API_KEY=${NEWSDATA_API_KEY}
+      - DATAFORSEO_API_KEY=jrhaner@memphis.edu
+      - DATAFORSEO_API_SECRET=3d2f70c957f6bbb7
     volumes:
       - ./server/src:/app/src
-    command: npm run dev
+  # command: npm run dev
 
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "8081:8081"
+        - "8083:8081"
     environment:
-      - EXPO_PUBLIC_API_URL=http://server:3000
+      - EXPO_PUBLIC_API_URL=http://server:3001
     volumes:
       - ./frontend:/app
       - /app/node_modules
