--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.0",
+    "@kurkle/color": "^0.4.0",
+    "chart.js": "^4.4.1",
     "expo": "^51.0.0",
     "react": "18.2.0",
-    "react-native": "0.74.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+  "react-native": "0.74.5",
     "react-native-web": "~0.19.0"
   },
   "devDependencies": {
