--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,15 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-  "react-native": "0.74.5",
+    "react-native": "0.74.5",
     "react-native-web": "~0.19.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@types/react": "~18.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
+    "eslint": "^9.39.1",
     "typescript": "~5.3.0"
   }
 }
