--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "get-free-https-proxy": "^2.0.2",
     "google-news-scraper": "^2.7.0",
     "google-trends-api": "^4.9.2",
     "node-fetch": "^3.3.2",
