--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     ports:
         - "8083:8081"
     environment:
-      - EXPO_PUBLIC_API_URL=http://server:3001
+      - EXPO_PUBLIC_API_URL=http://localhost:3001
     volumes:
       - ./frontend:/app
       - /app/node_modules
